--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pipelines-appservice-lib",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Common lib for Azure ARM and Kudu rest APIs, and app service deploy utilities.",
   "scripts": {
     "test": "jest --config jestconfig.json",
@@ -33,5 +33,8 @@
     "typed-rest-client": "0.12.0",
     "uuid": "3.1.0",
     "xml2js": "0.4.13"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
