--- a/packages/webclient/package.json
+++ b/packages/webclient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-actions-webclient",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Authorize to azure and make rest calls",
   "keywords": [
     "webclient",
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build"
+    "copypackage": "copy package.json lib",
+    "dist": "npm run build && npm run copypackage && cd lib && npm publish"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@actions/core": "^1.1.1",
+    "@actions/core": "^1.1.3",
     "@actions/exec": "^1.0.1",
     "@actions/io": "^1.0.1",
     "@types/node": "^12.7.8",
