--- a/packages/appservice-rest/package.json
+++ b/packages/appservice-rest/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "npm run build"
+    "copypackage": "copy package.json lib",
+    "dist": "npm run build && npm run copypackage && cd lib && npm publish"
   },
   "repository": {
     "type": "git",
@@ -31,8 +32,5 @@
     "fs": "0.0.1-security",
     "util": "^0.12.1",
     "xml2js": "^0.4.22"
-  },
-  "files": [
-    "lib/**/**"
-  ]
+  }
 }
