--- a/packages/appservice-rest/package.json
+++ b/packages/appservice-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-actions-appservice-rest",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Azure resource manager and kudu node rest module",
   "keywords": [
     "appservice",
@@ -28,7 +28,8 @@
   "dependencies": {
     "@actions/core": "^1.1.1",
     "@actions/io": "^1.0.1",
-    "azure-actions-webclient": "^1.0.8",
+    "@types/node": "^14.14.31",
+    "azure-actions-webclient": "^1.1.0",
     "fs": "0.0.1-security",
     "util": "^0.12.1",
     "uuid": "^3.3.3",
