--- a/packages/secret-parser/package.json
+++ b/packages/secret-parser/package.json
@@ -1,8 +1,8 @@
 {
   "name": "actions-secret-parser",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Parse and set repository secrets",
-  "main": "lib/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "tsc",
     "copypackage": "copy package.json lib",
@@ -23,10 +23,11 @@
   "homepage": "https://github.com/Microsoft/pipelines-appservice-lib/tree/master/packages/utility",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.17",
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@actions/core": "^1.1.3",
+    "@actions/core": "^1.1.10",
     "jsonpath": "^1.0.2",
     "xmldom": "^0.1.27",
     "xpath": "0.0.27"
