--- a/packages/secret-parser/tsconfig.json
+++ b/packages/secret-parser/tsconfig.json
@@ -4,7 +4,10 @@
       "module": "commonjs",
       "declaration": true,
       "outDir": "./lib",
-      "strict": false
+      "strict": false,
+      "types": [
+        "node"
+      ],
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
