--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "decompress-zip": "0.3.2",
     "minimatch": "^3.0.0",
     "node-stream-zip": "1.7.0",
+    "package.json": "^2.0.1",
     "shelljs": "^0.3.0",
     "typed-rest-client": "0.12.0",
     "uuid": "3.1.0",
