--- a/packages/appservice-rest/package.json
+++ b/packages/appservice-rest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-actions-appservice-rest",
-  "version": "1.3.7",
+  "version": "1.3.9",
   "description": "Azure resource manager and kudu node rest module",
   "keywords": [
     "appservice",
@@ -30,6 +30,7 @@
     "@actions/io": "^1.0.1",
     "@types/node": "^14.14.31",
     "azure-actions-webclient": "^1.1.0",
+    "copy": "^0.3.2",
     "fs": "0.0.1-security",
     "util": "^0.12.1",
     "uuid": "^3.3.3",
